--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   },
   "homepage": "https://github.com/daffl/html-breeze",
   "dependencies": {
-    "htmlparser2": "^3.8.0"
+    "htmlparser": "^1.7.7"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
+    "grunt-peg": "^1.5.0",
     "grunt-release": "^0.7.0",
-    "grunt-simple-mocha": "^0.4.0"
+    "grunt-simple-mocha": "^0.4.0",
+    "underscore": "^1.7.0"
   }
 }
