--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "homepage": "https://github.com/daffl/breezy",
   "dependencies": {
-    "htmlparser": "^1.7.7"
+    "htmlparser": "^1.7.7",
+    "virtual-dom": "0.0.24"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
@@ -29,7 +30,6 @@
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-peg": "^1.5.0",
     "grunt-release": "^0.7.0",
-    "grunt-simple-mocha": "^0.4.0",
-    "underscore": "^1.7.0"
+    "grunt-simple-mocha": "^0.4.0"
   }
 }
