--- a/examples/public/bower.json
+++ b/examples/public/bower.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "dependencies": {
     "todomvc-common": "~0.3.0",
-    "observe-js": "~0.5.2",
-    "jquery": "~2.0.3"
+    "observe-js": "~0.5.2"
   }
 }
