--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
   "dependencies": {
     "data-set": "^4.0.0",
     "htmlparser": "^1.7.7",
-    "virtual-dom": "0.0.24"
+    "virtual-dom": "^1.0.0"
   },
   "devDependencies": {
+    "gitdown": "^1.2.6",
     "grunt": "^0.4.5",
     "grunt-browserify": "^3.2.1",
     "grunt-cli": "^0.1.13",
