--- a/examples/public/bower.json
+++ b/examples/public/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "todomvc-common": "~0.3.0",
-    "observe-js": "~0.5.2"
+    "observe-js": "~0.5.2",
+    "breezy": "~0.1.0"
   }
 }
